Commit made by the Bioconductor Git-SVN bridge.
Commit id: 561c6a2a5e52872377762734072df71219cfe622

    small change vignette



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@103469 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -319,7 +319,7 @@ init <- c(15,20)
 for(i in c(1,2,4,6)){
 	bp <- signif(binom.test(init*i, p=0.5)$p.value,3)
 	cp <- signif(chisq.test(init*i, p=c(0.5,0.5))$p.value, 3)
-	cat(paste("A: ", init[1]*i , " B: ", init[2]*i, " binom p: ", bp, "chisq p: ", cp))
+	cat(paste("A: ", init[1]*i , " B: ", init[2]*i, " binom p: ", bp, "chisq p: ", cp,"\n"))
 }
 ```
 
@@ -475,4 +475,3 @@ Grid graphics
 sessionInfo()
 ```
 
-> "Who is is the master if nature provides the techniques to study itself"
