- Use RangedSummarizedExperiment from new SummarizedExperiment package instead   of old SummarizedExperiment from GenomicRanges. - Add "updateObject" methods for ASEset and ReferenceBias objects, and use them   to update serialized objects contained in the package.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@103558 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -42,7 +42,7 @@ library(AllelicImbalance)
 ```
 
 # ASEset
-The ASEset object is the central class of objects in the AllelicImbalance package. The ASEset object has the SummarizedExperiment from the `r Biocpkg("GenomicRanges")` package as parent class, and all functions you can apply on this class you can also apply on an ASEset.
+The ASEset object is the central class of objects in the AllelicImbalance package. The ASEset object has the RangedSummarizedExperiment from the `r Biocpkg("SummarizedExperiment")` package as parent class, and all functions you can apply on this class you can also apply on an ASEset.
 
 ## Simple example of building an ASEset object
 In this section we will walk through the various ways an ASEset object can be created. Although the preprocessing of RNA-seq data is not the primary focus of this package, it is a necessary step before analysis. There exists several different methods for obtaining a bam file, and this section should just be considered an example. For further details we refer to the web-pages of tophat, bowtie, bwa and samtools found in the links section at the end of this document.
