Commit made by the Bioconductor Git-SVN bridge.
Commit id: 886d9ac14982e734bb99866b8673d340dcac4d70

    build check ok


Commit id: 4d8e943df31e081a313d20d994aa721275e3b486

    randomRef updated


Commit id: 518b454df922d4fd4ad75658016f1886f31e7fa9

    before change of randomRef


Commit id: 2891753684734cc1a4b504f22bef9bc31b6ed4e7

    Merge branch 'master' into remove-genomatrix-assay


Commit id: 1f8d2eaf2024032cf10ac9c68a3ea30df3213e3c

    docs added and unit tests completed


Commit id: 50367b11afe2580a11199766b8094b03f2cc6445

    genotype to phase functionality finished, small step left to complete transfer


Commit id: 5fcbab4e2a406771af0cfea33eb043991aaa9c7b

    init genotype2Matrix internal small functions and unit testing


Commit id: 36b134587a78f0fbcc17c52f9656468bc312bb0e

    new geno func



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@104914 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -163,10 +163,15 @@ a.new <- ASEsetFromCountList(
 colData(a.simple) <- pdata
 ```
 ## Adding genotype information
-The genotype of the coding SNPs can be set by the command ```genotype(x) <- value```. If the genotype information is not available it can be inferred from the allele counts. The major allele will then be the allele with most counts and minor with second most counts. The notation is major/minor and for the example G/C, The G allele would be the major and C the minor allele.
+The genotype of the coding SNPs can be set by the command ```genotype(x) <- value```. If the genotype information is not available it can be inferred from the allele counts. The major allele will then be the allele with most counts and minor with second most counts. The notation is major/minor and for the example G/C, The G allele would be the major and C the minor allele. To be able to infer and store the genotype information it is required to first declare reference alleles. In cases when it is not important to know which allele is reference, the reference allele can be inferred from allele counts, by random takingone of the most expressed alleles. 
 
 ```{r echo=TRUE, eval=TRUE}
+#infer and add genotype require declaration of the reference allele 
+ref(a.simple) <- randomRef(a.simple)
 genotype(a.simple) <- inferGenotypes(a.simple)
+
+#access to genotype information requires knowledge of alternative allele
+alt(a.simple) <- inferAltAllele(a.simple)
 genotype(a.simple)[,1:4]
 ```
 
@@ -248,8 +253,8 @@ gr <- GRanges(
 a <- ASEsetFromCountList(gr, countListUnknown=countListUnknown)
 
 #set a random allele as reference
-genotype(a) <- inferGenotypes(a)
 ref(a) <- randomRef(a)
+genotype(a) <- inferGenotypes(a)
 
 #get the fraction of the reference allele
 refFrac <- fraction(a, top.fraction.criteria="ref")
