news file updated
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@115491 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+CHANGES IN VERSION 1.10.0
+-----------------------
+
+NEW FEATURES
+
+    o minFreqFilt and minCountFilt
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o The Phase2Genotype function now treats phase 0 as the ref allele and
+      phase 1 as the alternative allele.
+
+
 CHANGES IN VERSION 1.8.0
 -----------------------
 
