--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -9,7 +9,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{AllelicImbalance Vignette}
   %\VignetteEngine{knitr::rmarkdown}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
 ```{r style, echo = FALSE, results = 'asis'}
 BiocStyle::markdown()
