use pruning.mode=coarse instead of force=TRUE when calling seqlevels() setter
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@129280 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -444,7 +444,7 @@ library(Gviz)
 #subset ASEset and reads
 x <- ASEset[,1:2]
 r <- reads[1:2]
-seqlevels(r, force=TRUE) <- seqlevels(x)
+seqlevels(r, pruning.mode="coarse") <- seqlevels(x)
 
 GR <- GRanges(seqnames=seqlevels(x),
  		ranges=IRanges(start=min(start(x)), end=max(end(x))),
